[gd_scene load_steps=65 format=2]

[ext_resource path="res://Scene/Lab_region/Table/Lab_TableVertical_left.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scene/Object/ObjectBase.gd" type="Script" id=2]
[ext_resource path="res://Sprite/Effect/Burn/1_8.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Effect/Burn/1_36.png" type="Texture" id=4]
[ext_resource path="res://Sprite/Effect/Burn/1_41.png" type="Texture" id=5]
[ext_resource path="res://Sprite/Effect/Burn/1_44.png" type="Texture" id=6]
[ext_resource path="res://Sprite/Effect/Burn/1_53.png" type="Texture" id=7]
[ext_resource path="res://Sprite/Effect/Burn/1_4.png" type="Texture" id=8]
[ext_resource path="res://Sprite/Effect/Burn/1_58.png" type="Texture" id=9]
[ext_resource path="res://Sprite/Effect/Burn/1_45.png" type="Texture" id=10]
[ext_resource path="res://Sprite/Effect/Burn/1_3.png" type="Texture" id=11]
[ext_resource path="res://Sprite/Effect/Burn/1_49.png" type="Texture" id=12]
[ext_resource path="res://Sprite/Effect/Burn/1_10.png" type="Texture" id=13]
[ext_resource path="res://Sprite/Effect/Burn/1_17.png" type="Texture" id=14]
[ext_resource path="res://Sprite/Effect/Burn/1_50.png" type="Texture" id=15]
[ext_resource path="res://Sprite/Effect/Burn/1_16.png" type="Texture" id=16]
[ext_resource path="res://Sprite/Effect/Burn/1_22.png" type="Texture" id=17]
[ext_resource path="res://Sprite/Effect/Burn/1_1.png" type="Texture" id=18]
[ext_resource path="res://Sprite/Effect/Burn/1_5.png" type="Texture" id=19]
[ext_resource path="res://Sprite/Effect/Burn/1_19.png" type="Texture" id=20]
[ext_resource path="res://Sprite/Effect/Burn/1_2.png" type="Texture" id=21]
[ext_resource path="res://Sprite/Effect/Burn/1_26.png" type="Texture" id=22]
[ext_resource path="res://Sprite/Effect/Burn/1_13.png" type="Texture" id=23]
[ext_resource path="res://Sprite/Effect/Burn/1_14.png" type="Texture" id=24]
[ext_resource path="res://Sprite/Effect/Burn/1_27.png" type="Texture" id=25]
[ext_resource path="res://Sprite/Effect/Burn/1_9.png" type="Texture" id=26]
[ext_resource path="res://Sprite/Effect/Burn/1_31.png" type="Texture" id=27]
[ext_resource path="res://Sprite/Effect/Burn/1_30.png" type="Texture" id=28]
[ext_resource path="res://Sprite/Effect/Burn/1_55.png" type="Texture" id=29]
[ext_resource path="res://Sprite/Effect/Burn/1_51.png" type="Texture" id=30]
[ext_resource path="res://Sprite/Effect/Burn/1_59.png" type="Texture" id=31]
[ext_resource path="res://Sprite/Effect/Burn/1_18.png" type="Texture" id=32]
[ext_resource path="res://Sprite/Effect/Burn/1_23.png" type="Texture" id=33]
[ext_resource path="res://Sprite/Effect/Burn/1_12.png" type="Texture" id=34]
[ext_resource path="res://Sprite/Effect/Burn/1_39.png" type="Texture" id=35]
[ext_resource path="res://Sprite/Effect/Burn/1_25.png" type="Texture" id=36]
[ext_resource path="res://Sprite/Effect/Burn/1_48.png" type="Texture" id=37]
[ext_resource path="res://Sprite/Effect/Burn/1_34.png" type="Texture" id=38]
[ext_resource path="res://Sprite/Effect/Burn/1_20.png" type="Texture" id=39]
[ext_resource path="res://Sprite/Effect/Burn/1_47.png" type="Texture" id=40]
[ext_resource path="res://Sprite/Effect/Burn/1_11.png" type="Texture" id=41]
[ext_resource path="res://Sprite/Effect/Burn/1_15.png" type="Texture" id=42]
[ext_resource path="res://Sprite/Effect/Burn/1_0.png" type="Texture" id=43]
[ext_resource path="res://Sprite/Effect/Burn/1_54.png" type="Texture" id=44]
[ext_resource path="res://Sprite/Effect/Burn/1_57.png" type="Texture" id=45]
[ext_resource path="res://Sprite/Effect/Burn/1_7.png" type="Texture" id=46]
[ext_resource path="res://Sprite/Effect/Burn/1_60.png" type="Texture" id=47]
[ext_resource path="res://Sprite/Effect/Burn/1_38.png" type="Texture" id=48]
[ext_resource path="res://Sprite/Effect/Burn/1_21.png" type="Texture" id=49]
[ext_resource path="res://Sprite/Effect/Burn/1_24.png" type="Texture" id=50]
[ext_resource path="res://Sprite/Effect/Burn/1_28.png" type="Texture" id=51]
[ext_resource path="res://Sprite/Effect/Burn/1_6.png" type="Texture" id=52]
[ext_resource path="res://Sprite/Effect/Burn/1_43.png" type="Texture" id=53]
[ext_resource path="res://Sprite/Effect/Burn/1_37.png" type="Texture" id=54]
[ext_resource path="res://Sprite/Effect/Burn/1_46.png" type="Texture" id=55]
[ext_resource path="res://Sprite/Effect/Burn/1_40.png" type="Texture" id=56]
[ext_resource path="res://Sprite/Effect/Burn/1_33.png" type="Texture" id=57]
[ext_resource path="res://Sprite/Effect/Burn/1_32.png" type="Texture" id=58]
[ext_resource path="res://Sprite/Effect/Burn/1_52.png" type="Texture" id=59]
[ext_resource path="res://Sprite/Effect/Burn/1_42.png" type="Texture" id=60]
[ext_resource path="res://Sprite/Effect/Burn/1_35.png" type="Texture" id=61]
[ext_resource path="res://Sprite/Effect/Burn/1_56.png" type="Texture" id=62]
[ext_resource path="res://Sprite/Effect/Burn/1_29.png" type="Texture" id=63]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 43 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 19 ), ExtResource( 52 ), ExtResource( 46 ), ExtResource( 3 ), ExtResource( 26 ), ExtResource( 13 ), ExtResource( 41 ), ExtResource( 34 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 42 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 32 ), ExtResource( 20 ), ExtResource( 39 ), ExtResource( 49 ), ExtResource( 17 ), ExtResource( 33 ), ExtResource( 50 ), ExtResource( 36 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 51 ), ExtResource( 63 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 58 ), ExtResource( 57 ), ExtResource( 38 ), ExtResource( 61 ), ExtResource( 4 ), ExtResource( 54 ), ExtResource( 48 ), ExtResource( 35 ), ExtResource( 56 ), ExtResource( 5 ), ExtResource( 60 ), ExtResource( 53 ), ExtResource( 6 ), ExtResource( 10 ), ExtResource( 55 ), ExtResource( 40 ), ExtResource( 37 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 30 ), ExtResource( 59 ), ExtResource( 7 ), ExtResource( 44 ), ExtResource( 29 ), ExtResource( 62 ), ExtResource( 45 ), ExtResource( 9 ), ExtResource( 31 ), ExtResource( 47 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Lab_TableVertical_Left" instance=ExtResource( 1 )]
collision_layer = 8
script = ExtResource( 2 )
health = 15
destroyable = true

[node name="Sprite2" parent="." index="0"]
region_enabled = true
region_rect = Rect2( 840.688, 107.698, 191.631, 891.35 )

[node name="AnimatedSprite" parent="." index="1"]
visible = false
rotation = 1.5708
frames = SubResource( 1 )
frame = 60
playing = true

[node name="CollisionShape2D" parent="." index="2"]
visible = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
